Project_2022/myanalyzer.output
Grammar

    0 $accept: program $end

    1 program: decl_list

    2 comp_IDENT: '#' IDENTIFIER

    3 comp_ident: comp_IDENT
    4           | comp_IDENT '[' POSINT ']'
    5           | comp_IDENT '[' ']'
    6           | comp_IDENT ',' comp_ident
    7           | comp_IDENT '[' POSINT ']' ',' comp_ident
    8           | comp_IDENT '[' ']' ',' comp_ident

    9 comp_var: comp_ident ':' data_type ';'
   10         | comp_ident ':' IDENTIFIER ';'

   11 comp_func_decl: KW_DEF IDENTIFIER '(' parameters ')' '-' OP_GRT data_type ':' func_body KW_ENDDEF ';'
   12               | KW_DEF IDENTIFIER '(' parameters ')' '-' OP_GRT '[' ']' data_type ':' func_body KW_ENDDEF ';'
   13               | KW_DEF IDENTIFIER '(' parameters ')' ':' func_body KW_ENDDEF ';'

   14 comp_body: comp_var
   15          | comp_body comp_var
   16          | comp_body comp_func_decl

   17 comp: KW_COMP IDENTIFIER ':' comp_body KW_ENDCOMP ';'

   18 ident: IDENTIFIER
   19      | IDENTIFIER '[' POSINT ']'
   20      | IDENTIFIER '[' ']'
   21      | IDENTIFIER ',' ident
   22      | IDENTIFIER '[' POSINT ']' ',' ident
   23      | IDENTIFIER '[' ']' ',' ident

   24 const: KW_CONST IDENTIFIER '=' expr ':' data_type ';'

   25 expr: '+' expr
   26     | '-' expr
   27     | expr OP_POWER expr
   28     | expr '+' expr
   29     | expr '-' expr
   30     | expr '*' expr
   31     | expr '/' expr
   32     | expr '%' expr
   33     | expr OP_EQUALS expr
   34     | expr OP_NOT_EQ expr
   35     | expr OP_LS expr
   36     | expr OP_GRT expr
   37     | expr OP_LS_EQ expr
   38     | expr OP_GRT_EQ expr
   39     | KW_NOT expr
   40     | expr KW_AND expr
   41     | expr KW_OR expr
   42     | '(' expr ')'
   43     | func_call
   44     | KW_TRUE
   45     | KW_FALSE
   46     | IDENTIFIER '[' expr ']'
   47     | comp_IDENT
   48     | comp_IDENT '[' expr ']'
   49     | expr '.' comp_IDENT
   50     | expr '.' comp_IDENT '[' expr ']'
   51     | IDENTIFIER
   52     | STRING
   53     | REAL
   54     | POSINT

   55 var: ident ':' data_type ';'
   56    | ident ':' IDENTIFIER ';'

   57 func_body: %empty
   58          | var func_body
   59          | const func_body
   60          | instr func_body
   61          | if_stmt func_body

   62 func_decl: KW_DEF IDENTIFIER '(' parameters ')' '-' OP_GRT data_type ':' func_body KW_ENDDEF ';'
   63          | KW_DEF IDENTIFIER '(' parameters ')' '-' OP_GRT '[' ']' data_type ':' func_body KW_ENDDEF ';'
   64          | KW_DEF IDENTIFIER '(' parameters ')' ':' func_body KW_ENDDEF ';'
   65          | KW_DEF IDENTIFIER '(' parameters ')' '-' OP_GRT IDENTIFIER ':' func_body KW_ENDDEF ';'

   66 func_call: IDENTIFIER '(' func_input ')'
   67          | expr '.' IDENTIFIER '(' func_input ')'

   68 func_input: %empty
   69           | expr
   70           | expr ',' func_input

   71 parameters: %empty
   72           | IDENTIFIER ':' data_type
   73           | IDENTIFIER ':' IDENTIFIER
   74           | IDENTIFIER '[' ']' ':' data_type
   75           | IDENTIFIER ':' data_type ',' parameters
   76           | IDENTIFIER ':' IDENTIFIER ',' parameters
   77           | IDENTIFIER '[' ']' ':' data_type ',' parameters

   78 main_func: KW_DEF KW_MAIN '(' ')' ':' func_body KW_ENDDEF ';'

   79 decl_list: %empty
   80          | decl_list comp
   81          | decl_list const
   82          | decl_list var
   83          | decl_list func_decl
   84          | decl_list main_func

   85 instr: assign_instr ';'
   86      | KW_FOR IDENTIFIER KW_IN '[' expr ':' expr ']' ':' stmts KW_ENDFOR ';'
   87      | KW_FOR IDENTIFIER KW_IN '[' expr ':' expr ':' expr ']' ':' stmts KW_ENDFOR ';'
   88      | KW_FOR comp_IDENT KW_IN '[' expr ':' expr ']' ':' stmts KW_ENDFOR ';'
   89      | KW_FOR comp_IDENT KW_IN '[' expr ':' expr ':' expr ']' ':' stmts KW_ENDFOR ';'
   90      | KW_WHILE '(' expr ')' ':' stmts KW_ENDWHILE ';'
   91      | KW_BREAK ';'
   92      | KW_CONTINUE ';'
   93      | KW_RETURN ';'
   94      | KW_RETURN expr ';'
   95      | func_call ';'

   96 assign_instr: expr '=' expr
   97             | expr OP_ASGN_ADD expr
   98             | expr OP_ASGN_SUB expr
   99             | expr OP_ASGN_MUL expr
  100             | expr OP_ASGN_DIV expr
  101             | expr OP_ASGN_MOD expr

  102 stmts: instr
  103      | instr stmts
  104      | if_stmt
  105      | if_stmt stmts

  106 if_stmt: KW_IF '(' expr ')' ':' stmts KW_ENDIF ';'
  107        | KW_IF '(' expr ')' ':' stmts KW_ELSE ':' stmts KW_ENDIF ';'

  108 data_type: KW_BOOL
  109          | KW_INT
  110          | KW_SCALAR
  111          | KW_STRING
  112          | KW_VOID


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 2
    '%' (37) 32
    '(' (40) 11 12 13 42 62 63 64 65 66 67 78 90 106 107
    ')' (41) 11 12 13 42 62 63 64 65 66 67 78 90 106 107
    '*' (42) 30
    '+' (43) 25 28
    ',' (44) 6 7 8 21 22 23 70 75 76 77
    '-' (45) 11 12 26 29 62 63 65
    '.' (46) 49 50 67
    '/' (47) 31
    ':' (58) 9 10 11 12 13 17 24 55 56 62 63 64 65 72 73 74 75 76 77 78 86 87 88 89 90 106 107
    ';' (59) 9 10 11 12 13 17 24 55 56 62 63 64 65 78 85 86 87 88 89 90 91 92 93 94 95 106 107
    '=' (61) 24 96
    '[' (91) 4 5 7 8 12 19 20 22 23 46 48 50 63 74 77 86 87 88 89
    ']' (93) 4 5 7 8 12 19 20 22 23 46 48 50 63 74 77 86 87 88 89
    error (256)
    IDENTIFIER <crepr> (258) 2 10 11 12 13 17 18 19 20 21 22 23 24 46 51 56 62 63 64 65 66 67 72 73 74 75 76 77 86 87
    POSINT <crepr> (259) 4 7 19 22 54
    REAL <crepr> (260) 53
    STRING <crepr> (261) 52
    KW_INT (262) 109
    KW_SCALAR (263) 110
    KW_STRING (264) 111
    KW_VOID (265) 112
    KW_BOOL (266) 108
    KW_TRUE (267) 44
    KW_FALSE (268) 45
    KW_CONST (269) 24
    KW_IF (270) 106 107
    KW_ELSE (271) 107
    KW_ENDIF (272) 106 107
    KW_FOR (273) 86 87 88 89
    KW_IN (274) 86 87 88 89
    KW_ENDFOR (275) 86 87 88 89
    KW_WHILE (276) 90
    KW_ENDWHILE (277) 90
    KW_BREAK (278) 91
    KW_CONTINUE (279) 92
    KW_NOT (280) 39
    KW_AND (281) 40
    KW_OR (282) 41
    KW_DEF (283) 11 12 13 62 63 64 65 78
    KW_ENDDEF (284) 11 12 13 62 63 64 65 78
    KW_COMP (285) 17
    KW_ENDCOMP (286) 17
    KW_RETURN (287) 93 94
    KW_MAIN (288) 78
    OP_ASGN_ADD (289) 97
    OP_ASGN_SUB (290) 98
    OP_ASGN_MUL (291) 99
    OP_ASGN_DIV (292) 100
    OP_ASGN_MOD (293) 101
    OP_POWER (294) 27
    OP_EQUALS (295) 33
    OP_NOT_EQ (296) 34
    OP_LS (297) 35
    OP_LS_EQ (298) 37
    OP_GRT (299) 11 12 36 62 63 65
    OP_GRT_EQ (300) 38
    OP_SIGN (301)


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    program (63)
        on left: 1
        on right: 0
    comp_IDENT <crepr> (64)
        on left: 2
        on right: 3 4 5 6 7 8 47 48 49 50 88 89
    comp_ident <crepr> (65)
        on left: 3 4 5 6 7 8
        on right: 6 7 8 9 10
    comp_var <crepr> (66)
        on left: 9 10
        on right: 14 15
    comp_func_decl <crepr> (67)
        on left: 11 12 13
        on right: 16
    comp_body <crepr> (68)
        on left: 14 15 16
        on right: 15 16 17
    comp <crepr> (69)
        on left: 17
        on right: 80
    ident <crepr> (70)
        on left: 18 19 20 21 22 23
        on right: 21 22 23 55 56
    const <crepr> (71)
        on left: 24
        on right: 59 81
    expr <crepr> (72)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 46 48 49 50 67 69 70 86 87 88 89 90 94 96 97 98 99 100 101 106 107
    var <crepr> (73)
        on left: 55 56
        on right: 58 82
    func_body <crepr> (74)
        on left: 57 58 59 60 61
        on right: 11 12 13 58 59 60 61 62 63 64 65 78
    func_decl <crepr> (75)
        on left: 62 63 64 65
        on right: 83
    func_call <crepr> (76)
        on left: 66 67
        on right: 43 95
    func_input <crepr> (77)
        on left: 68 69 70
        on right: 66 67 70
    parameters <crepr> (78)
        on left: 71 72 73 74 75 76 77
        on right: 11 12 13 62 63 64 65 75 76 77
    main_func <crepr> (79)
        on left: 78
        on right: 84
    decl_list <crepr> (80)
        on left: 79 80 81 82 83 84
        on right: 1 80 81 82 83 84
    instr <crepr> (81)
        on left: 85 86 87 88 89 90 91 92 93 94 95
        on right: 60 102 103
    assign_instr <crepr> (82)
        on left: 96 97 98 99 100 101
        on right: 85
    stmts <crepr> (83)
        on left: 102 103 104 105
        on right: 86 87 88 89 90 103 105 106 107
    if_stmt <crepr> (84)
        on left: 106 107
        on right: 61 104 105
    data_type <crepr> (85)
        on left: 108 109 110 111 112
        on right: 9 11 12 24 55 62 63 72 74 75 77


State 0

    0 $accept: . program $end
    1 program: . decl_list
   79 decl_list: . %empty
   80          | . decl_list comp
   81          | . decl_list const
   82          | . decl_list var
   83          | . decl_list func_decl
   84          | . decl_list main_func

    $default  reduce using rule 79 (decl_list)

    program    go to state 1
    decl_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: decl_list .  [$end]
   17 comp: . KW_COMP IDENTIFIER ':' comp_body KW_ENDCOMP ';'
   18 ident: . IDENTIFIER
   19      | . IDENTIFIER '[' POSINT ']'
   20      | . IDENTIFIER '[' ']'
   21      | . IDENTIFIER ',' ident
   22      | . IDENTIFIER '[' POSINT ']' ',' ident
   23      | . IDENTIFIER '[' ']' ',' ident
   24 const: . KW_CONST IDENTIFIER '=' expr ':' data_type ';'
   55 var: . ident ':' data_type ';'
   56    | . ident ':' IDENTIFIER ';'
   62 func_decl: . KW_DEF IDENTIFIER '(' parameters ')' '-' OP_GRT data_type ':' func_body KW_ENDDEF ';'
   63          | . KW_DEF IDENTIFIER '(' parameters ')' '-' OP_GRT '[' ']' data_type ':' func_body KW_ENDDEF ';'
   64          | . KW_DEF IDENTIFIER '(' parameters ')' ':' func_body KW_ENDDEF ';'
   65          | . KW_DEF IDENTIFIER '(' parameters ')' '-' OP_GRT IDENTIFIER ':' func_body KW_ENDDEF ';'
   78 main_func: . KW_DEF KW_MAIN '(' ')' ':' func_body KW_ENDDEF ';'
   80 decl_list: decl_list . comp
   81          | decl_list . const
   82          | decl_list . var
   83          | decl_list . func_decl
   84          | decl_list . main_func

    IDENTIFIER  shift, and go to state 4
    KW_CONST    shift, and go to state 5
    KW_DEF      shift, and go to state 6
    KW_COMP     shift, and go to state 7

    $default  reduce using rule 1 (program)

    comp       go to state 8
    ident      go to state 9
    const      go to state 10
    var        go to state 11
    func_decl  go to state 12
    main_func  go to state 13


State 3

    0 $accept: program $end .

    $default  accept


State 4

   18 ident: IDENTIFIER .  [':']
   19      | IDENTIFIER . '[' POSINT ']'
   20      | IDENTIFIER . '[' ']'
   21      | IDENTIFIER . ',' ident
   22      | IDENTIFIER . '[' POSINT ']' ',' ident
   23      | IDENTIFIER . '[' ']' ',' ident

    '['  shift, and go to state 14
    ','  shift, and go to state 15

    $default  reduce using rule 18 (ident)


State 5

   24 const: KW_CONST . IDENTIFIER '=' expr ':' data_type ';'

    IDENTIFIER  shift, and go to state 16


State 6

   62 func_decl: KW_DEF . IDENTIFIER '(' parameters ')' '-' OP_GRT data_type ':' func_body KW_ENDDEF ';'
   63          | KW_DEF . IDENTIFIER '(' parameters ')' '-' OP_GRT '[' ']' data_type ':' func_body KW_ENDDEF ';'
   64          | KW_DEF . IDENTIFIER '(' parameters ')' ':' func_body KW_ENDDEF ';'
   65          | KW_DEF . IDENTIFIER '(' parameters ')' '-' OP_GRT IDENTIFIER ':' func_body KW_ENDDEF ';'
   78 main_func: KW_DEF . KW_MAIN '(' ')' ':' func_body KW_ENDDEF ';'

    IDENTIFIER  shift, and go to state 17
    KW_MAIN     shift, and go to state 18


State 7

   17 comp: KW_COMP . IDENTIFIER ':' comp_body KW_ENDCOMP ';'

    IDENTIFIER  shift, and go to state 19


State 8

   80 decl_list: decl_list comp .

    $default  reduce using rule 80 (decl_list)


State 9

   55 var: ident . ':' data_type ';'
   56    | ident . ':' IDENTIFIER ';'

    ':'  shift, and go to state 20


State 10

   81 decl_list: decl_list const .

    $default  reduce using rule 81 (decl_list)


State 11

   82 decl_list: decl_list var .

    $default  reduce using rule 82 (decl_list)


State 12

   83 decl_list: decl_list func_decl .

    $default  reduce using rule 83 (decl_list)


State 13

   84 decl_list: decl_list main_func .

    $default  reduce using rule 84 (decl_list)


State 14

   19 ident: IDENTIFIER '[' . POSINT ']'
   20      | IDENTIFIER '[' . ']'
   22      | IDENTIFIER '[' . POSINT ']' ',' ident
   23      | IDENTIFIER '[' . ']' ',' ident

    POSINT  shift, and go to state 21
    ']'     shift, and go to state 22


State 15

   18 ident: . IDENTIFIER
   19      | . IDENTIFIER '[' POSINT ']'
   20      | . IDENTIFIER '[' ']'
   21      | . IDENTIFIER ',' ident
   21      | IDENTIFIER ',' . ident
   22      | . IDENTIFIER '[' POSINT ']' ',' ident
   23      | . IDENTIFIER '[' ']' ',' ident

    IDENTIFIER  shift, and go to state 4

    ident  go to state 23


State 16

   24 const: KW_CONST IDENTIFIER . '=' expr ':' data_type ';'

    '='  shift, and go to state 24


State 17

   62 func_decl: KW_DEF IDENTIFIER . '(' parameters ')' '-' OP_GRT data_type ':' func_body KW_ENDDEF ';'
   63          | KW_DEF IDENTIFIER . '(' parameters ')' '-' OP_GRT '[' ']' data_type ':' func_body KW_ENDDEF ';'
   64          | KW_DEF IDENTIFIER . '(' parameters ')' ':' func_body KW_ENDDEF ';'
   65          | KW_DEF IDENTIFIER . '(' parameters ')' '-' OP_GRT IDENTIFIER ':' func_body KW_ENDDEF ';'

    '('  shift, and go to state 25


State 18

   78 main_func: KW_DEF KW_MAIN . '(' ')' ':' func_body KW_ENDDEF ';'

    '('  shift, and go to state 26


State 19

   17 comp: KW_COMP IDENTIFIER . ':' comp_body KW_ENDCOMP ';'

    ':'  shift, and go to state 27


State 20

   55 var: ident ':' . data_type ';'
   56    | ident ':' . IDENTIFIER ';'
  108 data_type: . KW_BOOL
  109          | . KW_INT
  110          | . KW_SCALAR
  111          | . KW_STRING
  112          | . KW_VOID

    IDENTIFIER  shift, and go to state 28
    KW_INT      shift, and go to state 29
    KW_SCALAR   shift, and go to state 30
    KW_STRING   shift, and go to state 31
    KW_VOID     shift, and go to state 32
    KW_BOOL     shift, and go to state 33

    data_type  go to state 34


State 21

   19 ident: IDENTIFIER '[' POSINT . ']'
   22      | IDENTIFIER '[' POSINT . ']' ',' ident

    ']'  shift, and go to state 35


State 22

   20 ident: IDENTIFIER '[' ']' .  [':']
   23      | IDENTIFIER '[' ']' . ',' ident

    ','  shift, and go to state 36

    $default  reduce using rule 20 (ident)


State 23

   21 ident: IDENTIFIER ',' ident .

    $default  reduce using rule 21 (ident)


State 24

    2 comp_IDENT: . '#' IDENTIFIER
   24 const: KW_CONST IDENTIFIER '=' . expr ':' data_type ';'
   25 expr: . '+' expr
   26     | . '-' expr
   27     | . expr OP_POWER expr
   28     | . expr '+' expr
   29     | . expr '-' expr
   30     | . expr '*' expr
   31     | . expr '/' expr
   32     | . expr '%' expr
   33     | . expr OP_EQUALS expr
   34     | . expr OP_NOT_EQ expr
   35     | . expr OP_LS expr
   36     | . expr OP_GRT expr
   37     | . expr OP_LS_EQ expr
   38     | . expr OP_GRT_EQ expr
   39     | . KW_NOT expr
   40     | . expr KW_AND expr
   41     | . expr KW_OR expr
   42     | . '(' expr ')'
   43     | . func_call
   44     | . KW_TRUE
   45     | . KW_FALSE
   46     | . IDENTIFIER '[' expr ']'
   47     | . comp_IDENT
   48     | . comp_IDENT '[' expr ']'
   49     | . expr '.' comp_IDENT
   50     | . expr '.' comp_IDENT '[' expr ']'
   51     | . IDENTIFIER
   52     | . STRING
   53     | . REAL
   54     | . POSINT
   66 func_call: . IDENTIFIER '(' func_input ')'
   67          | . expr '.' IDENTIFIER '(' func_input ')'

    IDENTIFIER  shift, and go to state 37
    POSINT      shift, and go to state 38
    REAL        shift, and go to state 39
    STRING      shift, and go to state 40
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    KW_NOT      shift, and go to state 43
    '+'         shift, and go to state 44
    '-'         shift, and go to state 45
    '('         shift, and go to state 46
    '#'         shift, and go to state 47

    comp_IDENT  go to state 48
    expr        go to state 49
    func_call   go to state 50


State 25

   62 func_decl: KW_DEF IDENTIFIER '(' . parameters ')' '-' OP_GRT data_type ':' func_body KW_ENDDEF ';'
   63          | KW_DEF IDENTIFIER '(' . parameters ')' '-' OP_GRT '[' ']' data_type ':' func_body KW_ENDDEF ';'
   64          | KW_DEF IDENTIFIER '(' . parameters ')' ':' func_body KW_ENDDEF ';'
   65          | KW_DEF IDENTIFIER '(' . parameters ')' '-' OP_GRT IDENTIFIER ':' func_body KW_ENDDEF ';'
   71 parameters: . %empty  [')']
   72           | . IDENTIFIER ':' data_type
   73           | . IDENTIFIER ':' IDENTIFIER
   74           | . IDENTIFIER '[' ']' ':' data_type
   75           | . IDENTIFIER ':' data_type ',' parameters
   76           | . IDENTIFIER ':' IDENTIFIER ',' parameters
   77           | . IDENTIFIER '[' ']' ':' data_type ',' parameters

    IDENTIFIER  shift, and go to state 51

    $default  reduce using rule 71 (parameters)

    parameters  go to state 52


State 26

   78 main_func: KW_DEF KW_MAIN '(' . ')' ':' func_body KW_ENDDEF ';'

    ')'  shift, and go to state 53


State 27

    2 comp_IDENT: . '#' IDENTIFIER
    3 comp_ident: . comp_IDENT
    4           | . comp_IDENT '[' POSINT ']'
    5           | . comp_IDENT '[' ']'
    6           | . comp_IDENT ',' comp_ident
    7           | . comp_IDENT '[' POSINT ']' ',' comp_ident
    8           | . comp_IDENT '[' ']' ',' comp_ident
    9 comp_var: . comp_ident ':' data_type ';'
   10         | . comp_ident ':' IDENTIFIER ';'
   14 comp_body: . comp_var
   15          | . comp_body comp_var
   16          | . comp_body comp_func_decl
   17 comp: KW_COMP IDENTIFIER ':' . comp_body KW_ENDCOMP ';'

    '#'  shift, and go to state 47

    comp_IDENT  go to state 54
    comp_ident  go to state 55
    comp_var    go to state 56
    comp_body   go to state 57


State 28

   56 var: ident ':' IDENTIFIER . ';'

    ';'  shift, and go to state 58


State 29

  109 data_type: KW_INT .

    $default  reduce using rule 109 (data_type)


State 30

  110 data_type: KW_SCALAR .

    $default  reduce using rule 110 (data_type)


State 31

  111 data_type: KW_STRING .

    $default  reduce using rule 111 (data_type)


State 32

  112 data_type: KW_VOID .

    $default  reduce using rule 112 (data_type)


State 33

  108 data_type: KW_BOOL .

    $default  reduce using rule 108 (data_type)


State 34

   55 var: ident ':' data_type . ';'

    ';'  shift, and go to state 59


State 35

   19 ident: IDENTIFIER '[' POSINT ']' .  [':']
   22      | IDENTIFIER '[' POSINT ']' . ',' ident

    ','  shift, and go to state 60

    $default  reduce using rule 19 (ident)


State 36

   18 ident: . IDENTIFIER
   19      | . IDENTIFIER '[' POSINT ']'
   20      | . IDENTIFIER '[' ']'
   21      | . IDENTIFIER ',' ident
   22      | . IDENTIFIER '[' POSINT ']' ',' ident
   23      | . IDENTIFIER '[' ']' ',' ident
   23      | IDENTIFIER '[' ']' ',' . ident

    IDENTIFIER  shift, and go to state 4

    ident  go to state 61


State 37

   46 expr: IDENTIFIER . '[' expr ']'
   51     | IDENTIFIER .  [KW_AND, KW_OR, OP_ASGN_ADD, OP_ASGN_SUB, OP_ASGN_MUL, OP_ASGN_DIV, OP_ASGN_MOD, OP_POWER, OP_EQUALS, OP_NOT_EQ, OP_LS, OP_LS_EQ, OP_GRT, OP_GRT_EQ, '=', '+', '-', '*', '/', '%', ')', ']', '.', ',', ':', ';']
   66 func_call: IDENTIFIER . '(' func_input ')'

    '('  shift, and go to state 62
    '['  shift, and go to state 63

    $default  reduce using rule 51 (expr)


State 38

   54 expr: POSINT .

    $default  reduce using rule 54 (expr)


State 39

   53 expr: REAL .

    $default  reduce using rule 53 (expr)


State 40

   52 expr: STRING .

    $default  reduce using rule 52 (expr)


State 41

   44 expr: KW_TRUE .

    $default  reduce using rule 44 (expr)


State 42

   45 expr: KW_FALSE .

    $default  reduce using rule 45 (expr)


State 43

    2 comp_IDENT: . '#' IDENTIFIER
   25 expr: . '+' expr
   26     | . '-' expr
   27     | . expr OP_POWER expr
   28     | . expr '+' expr
   29     | . expr '-' expr
   30     | . expr '*' expr
   31     | . expr '/' expr
   32     | . expr '%' expr
   33     | . expr OP_EQUALS expr
   34     | . expr OP_NOT_EQ expr
   35     | . expr OP_LS expr
   36     | . expr OP_GRT expr
   37     | . expr OP_LS_EQ expr
   38     | . expr OP_GRT_EQ expr
   39     | . KW_NOT expr
   39     | KW_NOT . expr
   40     | . expr KW_AND expr
   41     | . expr KW_OR expr
   42     | . '(' expr ')'
   43     | . func_call
   44     | . KW_TRUE
   45     | . KW_FALSE
   46     | . IDENTIFIER '[' expr ']'
   47     | . comp_IDENT
   48     | . comp_IDENT '[' expr ']'
   49     | . expr '.' comp_IDENT
   50     | . expr '.' comp_IDENT '[' expr ']'
   51     | . IDENTIFIER
   52     | . STRING
   53     | . REAL
   54     | . POSINT
   66 func_call: . IDENTIFIER '(' func_input ')'
   67          | . expr '.' IDENTIFIER '(' func_input ')'

    IDENTIFIER  shift, and go to state 37
    POSINT      shift, and go to state 38
    REAL        shift, and go to state 39
    STRING      shift, and go to state 40
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    KW_NOT      shift, and go to state 43
    '+'         shift, and go to state 44
    '-'         shift, and go to state 45
    '('         shift, and go to state 46
    '#'         shift, and go to state 47

    comp_IDENT  go to state 48
    expr        go to state 64
    func_call   go to state 50


State 44

    2 comp_IDENT: . '#' IDENTIFIER
   25 expr: . '+' expr
   25     | '+' . expr
   26     | . '-' expr
   27     | . expr OP_POWER expr
   28     | . expr '+' expr
   29     | . expr '-' expr
   30     | . expr '*' expr
   31     | . expr '/' expr
   32     | . expr '%' expr
   33     | . expr OP_EQUALS expr
   34     | . expr OP_NOT_EQ expr
   35     | . expr OP_LS expr
   36     | . expr OP_GRT expr
   37     | . expr OP_LS_EQ expr
   38     | . expr OP_GRT_EQ expr
   39     | . KW_NOT expr
   40     | . expr KW_AND expr
   41     | . expr KW_OR expr
   42     | . '(' expr ')'
   43     | . func_call
   44     | . KW_TRUE
   45     | . KW_FALSE
   46     | . IDENTIFIER '[' expr ']'
   47     | . comp_IDENT
   48     | . comp_IDENT '[' expr ']'
   49     | . expr '.' comp_IDENT
   50     | . expr '.' comp_IDENT '[' expr ']'
   51     | . IDENTIFIER
   52     | . STRING
   53     | . REAL
   54     | . POSINT
   66 func_call: . IDENTIFIER '(' func_input ')'
   67          | . expr '.' IDENTIFIER '(' func_input ')'

    IDENTIFIER  shift, and go to state 37
    POSINT      shift, and go to state 38
    REAL        shift, and go to state 39
    STRING      shift, and go to state 40
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    KW_NOT      shift, and go to state 43
    '+'         shift, and go to state 44
    '-'         shift, and go to state 45
    '('         shift, and go to state 46
    '#'         shift, and go to state 47

    comp_IDENT  go to state 48
    expr        go to state 65
    func_call   go to state 50


State 45

    2 comp_IDENT: . '#' IDENTIFIER
   25 expr: . '+' expr
   26     | . '-' expr
   26     | '-' . expr
   27     | . expr OP_POWER expr
   28     | . expr '+' expr
   29     | . expr '-' expr
   30     | . expr '*' expr
   31     | . expr '/' expr
   32     | . expr '%' expr
   33     | . expr OP_EQUALS expr
   34     | . expr OP_NOT_EQ expr
   35     | . expr OP_LS expr
   36     | . expr OP_GRT expr
   37     | . expr OP_LS_EQ expr
   38     | . expr OP_GRT_EQ expr
   39     | . KW_NOT expr
   40     | . expr KW_AND expr
   41     | . expr KW_OR expr
   42     | . '(' expr ')'
   43     | . func_call
   44     | . KW_TRUE
   45     | . KW_FALSE
   46     | . IDENTIFIER '[' expr ']'
   47     | . comp_IDENT
   48     | . comp_IDENT '[' expr ']'
   49     | . expr '.' comp_IDENT
   50     | . expr '.' comp_IDENT '[' expr ']'
   51     | . IDENTIFIER
   52     | . STRING
   53     | . REAL
   54     | . POSINT
   66 func_call: . IDENTIFIER '(' func_input ')'
   67          | . expr '.' IDENTIFIER '(' func_input ')'

    IDENTIFIER  shift, and go to state 37
    POSINT      shift, and go to state 38
    REAL        shift, and go to state 39
    STRING      shift, and go to state 40
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    KW_NOT      shift, and go to state 43
    '+'         shift, and go to state 44
    '-'         shift, and go to state 45
    '('         shift, and go to state 46
    '#'         shift, and go to state 47

    comp_IDENT  go to state 48
    expr        go to state 66
    func_call   go to state 50


State 46

    2 comp_IDENT: . '#' IDENTIFIER
   25 expr: . '+' expr
   26     | . '-' expr
   27     | . expr OP_POWER expr
   28     | . expr '+' expr
   29     | . expr '-' expr
   30     | . expr '*' expr
   31     | . expr '/' expr
   32     | . expr '%' expr
   33     | . expr OP_EQUALS expr
   34     | . expr OP_NOT_EQ expr
   35     | . expr OP_LS expr
   36     | . expr OP_GRT expr
   37     | . expr OP_LS_EQ expr
   38     | . expr OP_GRT_EQ expr
   39     | . KW_NOT expr
   40     | . expr KW_AND expr
   41     | . expr KW_OR expr
   42     | . '(' expr ')'
   42     | '(' . expr ')'
   43     | . func_call
   44     | . KW_TRUE
   45     | . KW_FALSE
   46     | . IDENTIFIER '[' expr ']'
   47     | . comp_IDENT
   48     | . comp_IDENT '[' expr ']'
   49     | . expr '.' comp_IDENT
   50     | . expr '.' comp_IDENT '[' expr ']'
   51     | . IDENTIFIER
   52     | . STRING
   53     | . REAL
   54     | . POSINT
   66 func_call: . IDENTIFIER '(' func_input ')'
   67          | . expr '.' IDENTIFIER '(' func_input ')'

    IDENTIFIER  shift, and go to state 37
    POSINT      shift, and go to state 38
    REAL        shift, and go to state 39
    STRING      shift, and go to state 40
    KW_TRUE     shift, and go to state 41
    KW_FALSE    shift, and go to state 42
    KW_NOT      shift, and go to state 43
    '+'         shift, and go to state 44
    '-'         shift, and go to state 45
    '('         shift, and go to state 46
    '#'         shift, and go to state 47

    comp_IDENT  go to state 48
    expr        go to state 67
    func_call   go to state 50


State 47

    2 comp_IDENT: '#' . IDENTIFIER

    IDENTIFIER  shift, and go to state 68


State 48

   47 expr: comp_IDENT .  [KW_AND, KW_OR, OP_ASGN_ADD, OP_ASGN_SUB, OP_ASGN_MUL, OP_ASGN_DIV, OP_ASGN_MOD, OP_POWER, OP_EQUALS, OP_NOT_EQ, OP_LS, OP_LS_EQ, OP_GRT, OP_GRT_EQ, '=', '+', '-', '*', '/', '%', ')', ']', '.', ',', ':', ';']
   48     | comp_IDENT . '[' expr ']'

    '['  shift, and go to state 69

    $default  reduce using rule 47 (expr)


State 49

   24 const: KW_CONST IDENTIFIER '=' expr . ':' data_type ';'
   27 expr: expr . OP_POWER expr
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | expr . '%' expr
   33     | expr . OP_EQUALS expr
   34     | expr . OP_NOT_EQ expr
   35     | expr . OP_LS expr
   36     | expr . OP_GRT expr
   37     | expr . OP_LS_EQ expr
   38     | expr . OP_GRT_EQ expr
   40     | expr . KW_AND expr
   41     | expr . KW_OR expr
   49     | expr . '.' comp_IDENT
   50     | expr . '.' comp_IDENT '[' expr ']'
   67 func_call: expr . '.' IDENTIFIER '(' func_input ')'

    KW_AND     shift, and go to state 70
    KW_OR      shift, and go to state 71
    OP_POWER   shift, and go to state 72
    OP_EQUALS  shift, and go to state 73
    OP_NOT_EQ  shift, and go to state 74
    OP_LS      shift, and go to state 75
    OP_LS_EQ   shift, and go to state 76
    OP_GRT     shift, and go to state 77
    OP_GRT_EQ  shift, and go to state 78
    '+'        shift, and go to state 79
    '-'        shift, and go to state 80
    '*'        shift, and go to state 81
    '/'        shift, and go to state 82
    '%'        shift, and go to state 83
    '.'        shift, and go to state 84
    ':'        shift, and go to state 85


State 50

   43 expr: func_call .

    $default  reduce using rule 43 (expr)


State 51

   72 parameters: IDENTIFIER . ':' data_type
   73           | IDENTIFIER . ':' IDENTIFIER
   74           | IDENTIFIER . '[' ']' ':' data_type
   75           | IDENTIFIER . ':' data_type ',' parameters
   76           | IDENTIFIER . ':' IDENTIFIER ',' parameters
   77           | IDENTIFIER . '[' ']' ':' data_type ',' parameters

    '['  shift, and go to state 86
    ':'  shift, and go to state 87


State 52
